@@ -1,248 +1,47 @@
-import com.google.common.collect.ImmutableList;
-import com.mojang.datafixers.util.Pair;
+import java.util.List;
+import java.util.Optional;
 
-public class nx {
-   public static final aeo<dwg> a = nu.a("village/snowy/town_centers");
-   private static final aeo<dwg> b = nu.a("village/snowy/terminators");
-
-   public static void a(nn<dwg> $$0) {
-      hg<dub> $$1 = $$0.a(jd.ay);
-      hf<dub> $$2 = $$1.b(pf.h);
-      hf<dub> $$3 = $$1.b(pf.c);
-      hf<dub> $$4 = $$1.b(pf.d);
-      hg<dyo> $$5 = $$0.a(jd.aA);
-      hf<dyo> $$6 = $$5.b(nv.k);
-      hf<dyo> $$7 = $$5.b(nv.n);
-      hf<dyo> $$8 = $$5.b(nv.c);
-      hg<dwg> $$9 = $$0.a(jd.aC);
-      hf<dwg> $$10 = $$9.b(nu.a);
-      hf<dwg> $$11 = $$9.b(b);
+public interface nx {
+   static void a(nm<dvf> $$0) {
+      hf<duz> $$1 = $$0.a(jc.az);
+      hf<cqk> $$2 = $$0.a(jc.ap);
+      he.c<dvf> $$3 = $$0.a(
+         dus.a,
+         new dvf(
+            List.of(dvf.a($$1.b(dut.t)), dvf.a($$1.b(dut.u)), dvf.a($$1.b(dut.v)), dvf.a($$1.b(dut.w)), dvf.a($$1.b(dut.x))), new dvu(34, 8, dvv.a, 10387312)
+         )
+      );
+      $$0.a(dus.b, new dvf($$1.b(dut.f), new dvu(32, 8, dvv.a, 14357617)));
+      $$0.a(dus.c, new dvf($$1.b(dut.g), new dvu(32, 8, dvv.a, 14357618)));
+      $$0.a(dus.d, new dvf($$1.b(dut.e), new dvu(32, 8, dvv.a, 14357619)));
+      $$0.a(dus.e, new dvf($$1.b(dut.j), new dvu(32, 8, dvv.a, 14357620)));
+      $$0.a(dus.f, new dvf($$1.b(dut.a), new dvu(hz.g, dvw.c.b, 0.2F, 165745296, Optional.of(new dvw.a($$3, 10)), 32, 8, dvv.a)));
+      $$0.a(dus.q, new dvf($$1.b(dut.F), new dvu(24, 8, dvv.a, 20083232)));
+      $$0.a(dus.g, new dvf($$1.b(dut.l), new dvu(32, 5, dvv.b, 10387313)));
+      $$0.a(dus.h, new dvf($$1.b(dut.d), new dvu(80, 20, dvv.b, 10387319)));
+      $$0.a(dus.i, new dvf($$1.b(dut.r), new dvu(new hz(9, 0, 9), dvw.c.c, 0.01F, 0, Optional.empty(), 1, 0, dvv.a)));
+      $$0.a(dus.j, new dvf(List.of(dvf.a($$1.b(dut.b)), dvf.a($$1.b(dut.c))), new dvu(hz.g, dvw.c.d, 0.004F, 0, Optional.empty(), 1, 0, dvv.a)));
       $$0.a(
-         a,
-         new dwg(
-            $$10,
-            ImmutableList.of(
-               Pair.of(dwe.a("village/snowy/town_centers/snowy_meeting_point_1"), 100),
-               Pair.of(dwe.a("village/snowy/town_centers/snowy_meeting_point_2"), 50),
-               Pair.of(dwe.a("village/snowy/town_centers/snowy_meeting_point_3"), 150),
-               Pair.of(dwe.a("village/snowy/zombie/town_centers/snowy_meeting_point_1"), 2),
-               Pair.of(dwe.a("village/snowy/zombie/town_centers/snowy_meeting_point_2"), 1),
-               Pair.of(dwe.a("village/snowy/zombie/town_centers/snowy_meeting_point_3"), 3)
+         dus.k,
+         new dvf(
+            List.of(
+               dvf.a($$1.b(dut.y)),
+               dvf.a($$1.b(dut.z)),
+               dvf.a($$1.b(dut.A)),
+               dvf.a($$1.b(dut.B)),
+               dvf.a($$1.b(dut.C)),
+               dvf.a($$1.b(dut.D)),
+               dvf.a($$1.b(dut.E))
             ),
-            dwg.a.b
+            new dvu(40, 15, dvv.a, 34222645)
          )
       );
-      nu.a(
-         $$0,
-         "village/snowy/streets",
-         new dwg(
-            $$11,
-            ImmutableList.of(
-               Pair.of(dwe.a("village/snowy/streets/corner_01", $$6), 2),
-               Pair.of(dwe.a("village/snowy/streets/corner_02", $$6), 2),
-               Pair.of(dwe.a("village/snowy/streets/corner_03", $$6), 2),
-               Pair.of(dwe.a("village/snowy/streets/square_01", $$6), 2),
-               Pair.of(dwe.a("village/snowy/streets/straight_01", $$6), 4),
-               Pair.of(dwe.a("village/snowy/streets/straight_02", $$6), 4),
-               Pair.of(dwe.a("village/snowy/streets/straight_03", $$6), 4),
-               Pair.of(dwe.a("village/snowy/streets/straight_04", $$6), 7),
-               Pair.of(dwe.a("village/snowy/streets/straight_06", $$6), 4),
-               Pair.of(dwe.a("village/snowy/streets/straight_08", $$6), 4),
-               Pair.of(dwe.a("village/snowy/streets/crossroad_02", $$6), 1),
-               Pair.of(dwe.a("village/snowy/streets/crossroad_03", $$6), 2),
-               new Pair[]{
-                  Pair.of(dwe.a("village/snowy/streets/crossroad_04", $$6), 2),
-                  Pair.of(dwe.a("village/snowy/streets/crossroad_05", $$6), 2),
-                  Pair.of(dwe.a("village/snowy/streets/crossroad_06", $$6), 2),
-                  Pair.of(dwe.a("village/snowy/streets/turn_01", $$6), 3)
-               }
-            ),
-            dwg.a.a
-         )
-      );
-      nu.a(
-         $$0,
-         "village/snowy/zombie/streets",
-         new dwg(
-            $$11,
-            ImmutableList.of(
-               Pair.of(dwe.a("village/snowy/zombie/streets/corner_01", $$6), 2),
-               Pair.of(dwe.a("village/snowy/zombie/streets/corner_02", $$6), 2),
-               Pair.of(dwe.a("village/snowy/zombie/streets/corner_03", $$6), 2),
-               Pair.of(dwe.a("village/snowy/zombie/streets/square_01", $$6), 2),
-               Pair.of(dwe.a("village/snowy/zombie/streets/straight_01", $$6), 4),
-               Pair.of(dwe.a("village/snowy/zombie/streets/straight_02", $$6), 4),
-               Pair.of(dwe.a("village/snowy/zombie/streets/straight_03", $$6), 4),
-               Pair.of(dwe.a("village/snowy/zombie/streets/straight_04", $$6), 7),
-               Pair.of(dwe.a("village/snowy/zombie/streets/straight_06", $$6), 4),
-               Pair.of(dwe.a("village/snowy/zombie/streets/straight_08", $$6), 4),
-               Pair.of(dwe.a("village/snowy/zombie/streets/crossroad_02", $$6), 1),
-               Pair.of(dwe.a("village/snowy/zombie/streets/crossroad_03", $$6), 2),
-               new Pair[]{
-                  Pair.of(dwe.a("village/snowy/zombie/streets/crossroad_04", $$6), 2),
-                  Pair.of(dwe.a("village/snowy/zombie/streets/crossroad_05", $$6), 2),
-                  Pair.of(dwe.a("village/snowy/zombie/streets/crossroad_06", $$6), 2),
-                  Pair.of(dwe.a("village/snowy/zombie/streets/turn_01", $$6), 3)
-               }
-            ),
-            dwg.a.a
-         )
-      );
-      nu.a(
-         $$0,
-         "village/snowy/houses",
-         new dwg(
-            $$11,
-            ImmutableList.of(
-               Pair.of(dwe.a("village/snowy/houses/snowy_small_house_1"), 2),
-               Pair.of(dwe.a("village/snowy/houses/snowy_small_house_2"), 2),
-               Pair.of(dwe.a("village/snowy/houses/snowy_small_house_3"), 2),
-               Pair.of(dwe.a("village/snowy/houses/snowy_small_house_4"), 3),
-               Pair.of(dwe.a("village/snowy/houses/snowy_small_house_5"), 2),
-               Pair.of(dwe.a("village/snowy/houses/snowy_small_house_6"), 2),
-               Pair.of(dwe.a("village/snowy/houses/snowy_small_house_7"), 2),
-               Pair.of(dwe.a("village/snowy/houses/snowy_small_house_8"), 2),
-               Pair.of(dwe.a("village/snowy/houses/snowy_medium_house_1"), 2),
-               Pair.of(dwe.a("village/snowy/houses/snowy_medium_house_2"), 2),
-               Pair.of(dwe.a("village/snowy/houses/snowy_medium_house_3"), 2),
-               Pair.of(dwe.a("village/snowy/houses/snowy_butchers_shop_1"), 2),
-               new Pair[]{
-                  Pair.of(dwe.a("village/snowy/houses/snowy_butchers_shop_2"), 2),
-                  Pair.of(dwe.a("village/snowy/houses/snowy_tool_smith_1"), 2),
-                  Pair.of(dwe.a("village/snowy/houses/snowy_fletcher_house_1"), 2),
-                  Pair.of(dwe.a("village/snowy/houses/snowy_shepherds_house_1"), 3),
-                  Pair.of(dwe.a("village/snowy/houses/snowy_armorer_house_1"), 1),
-                  Pair.of(dwe.a("village/snowy/houses/snowy_armorer_house_2"), 1),
-                  Pair.of(dwe.a("village/snowy/houses/snowy_fisher_cottage"), 2),
-                  Pair.of(dwe.a("village/snowy/houses/snowy_tannery_1"), 2),
-                  Pair.of(dwe.a("village/snowy/houses/snowy_cartographer_house_1"), 2),
-                  Pair.of(dwe.a("village/snowy/houses/snowy_library_1"), 2),
-                  Pair.of(dwe.a("village/snowy/houses/snowy_masons_house_1"), 2),
-                  Pair.of(dwe.a("village/snowy/houses/snowy_masons_house_2"), 2),
-                  Pair.of(dwe.a("village/snowy/houses/snowy_weapon_smith_1"), 2),
-                  Pair.of(dwe.a("village/snowy/houses/snowy_temple_1"), 2),
-                  Pair.of(dwe.a("village/snowy/houses/snowy_farm_1", $$7), 3),
-                  Pair.of(dwe.a("village/snowy/houses/snowy_farm_2", $$7), 3),
-                  Pair.of(dwe.a("village/snowy/houses/snowy_animal_pen_1"), 2),
-                  Pair.of(dwe.a("village/snowy/houses/snowy_animal_pen_2"), 2),
-                  Pair.of(dwe.g(), 6)
-               }
-            ),
-            dwg.a.b
-         )
-      );
-      nu.a(
-         $$0,
-         "village/snowy/zombie/houses",
-         new dwg(
-            $$11,
-            ImmutableList.of(
-               Pair.of(dwe.a("village/snowy/zombie/houses/snowy_small_house_1", $$8), 2),
-               Pair.of(dwe.a("village/snowy/zombie/houses/snowy_small_house_2", $$8), 2),
-               Pair.of(dwe.a("village/snowy/zombie/houses/snowy_small_house_3", $$8), 2),
-               Pair.of(dwe.a("village/snowy/zombie/houses/snowy_small_house_4", $$8), 2),
-               Pair.of(dwe.a("village/snowy/zombie/houses/snowy_small_house_5", $$8), 2),
-               Pair.of(dwe.a("village/snowy/zombie/houses/snowy_small_house_6", $$8), 2),
-               Pair.of(dwe.a("village/snowy/zombie/houses/snowy_small_house_7", $$8), 2),
-               Pair.of(dwe.a("village/snowy/zombie/houses/snowy_small_house_8", $$8), 2),
-               Pair.of(dwe.a("village/snowy/zombie/houses/snowy_medium_house_1", $$8), 2),
-               Pair.of(dwe.a("village/snowy/zombie/houses/snowy_medium_house_2", $$8), 2),
-               Pair.of(dwe.a("village/snowy/zombie/houses/snowy_medium_house_3", $$8), 1),
-               Pair.of(dwe.a("village/snowy/houses/snowy_butchers_shop_1", $$8), 2),
-               new Pair[]{
-                  Pair.of(dwe.a("village/snowy/houses/snowy_butchers_shop_2", $$8), 2),
-                  Pair.of(dwe.a("village/snowy/houses/snowy_tool_smith_1", $$8), 2),
-                  Pair.of(dwe.a("village/snowy/houses/snowy_fletcher_house_1", $$8), 2),
-                  Pair.of(dwe.a("village/snowy/houses/snowy_shepherds_house_1", $$8), 2),
-                  Pair.of(dwe.a("village/snowy/houses/snowy_armorer_house_1", $$8), 1),
-                  Pair.of(dwe.a("village/snowy/houses/snowy_armorer_house_2", $$8), 1),
-                  Pair.of(dwe.a("village/snowy/houses/snowy_fisher_cottage", $$8), 2),
-                  Pair.of(dwe.a("village/snowy/houses/snowy_tannery_1", $$8), 2),
-                  Pair.of(dwe.a("village/snowy/houses/snowy_cartographer_house_1", $$8), 2),
-                  Pair.of(dwe.a("village/snowy/houses/snowy_library_1", $$8), 2),
-                  Pair.of(dwe.a("village/snowy/houses/snowy_masons_house_1", $$8), 2),
-                  Pair.of(dwe.a("village/snowy/houses/snowy_masons_house_2", $$8), 2),
-                  Pair.of(dwe.a("village/snowy/houses/snowy_weapon_smith_1", $$8), 2),
-                  Pair.of(dwe.a("village/snowy/houses/snowy_temple_1", $$8), 2),
-                  Pair.of(dwe.a("village/snowy/houses/snowy_farm_1", $$8), 3),
-                  Pair.of(dwe.a("village/snowy/houses/snowy_farm_2", $$8), 3),
-                  Pair.of(dwe.a("village/snowy/houses/snowy_animal_pen_1", $$8), 2),
-                  Pair.of(dwe.a("village/snowy/houses/snowy_animal_pen_2", $$8), 2),
-                  Pair.of(dwe.g(), 6)
-               }
-            ),
-            dwg.a.b
-         )
-      );
-      $$0.a(
-         b,
-         new dwg(
-            $$10,
-            ImmutableList.of(
-               Pair.of(dwe.a("village/plains/terminators/terminator_01", $$6), 1),
-               Pair.of(dwe.a("village/plains/terminators/terminator_02", $$6), 1),
-               Pair.of(dwe.a("village/plains/terminators/terminator_03", $$6), 1),
-               Pair.of(dwe.a("village/plains/terminators/terminator_04", $$6), 1)
-            ),
-            dwg.a.a
-         )
-      );
-      nu.a($$0, "village/snowy/trees", new dwg($$10, ImmutableList.of(Pair.of(dwe.a($$2), 1)), dwg.a.b));
-      nu.a(
-         $$0,
-         "village/snowy/decor",
-         new dwg(
-            $$10,
-            ImmutableList.of(
-               Pair.of(dwe.a("village/snowy/snowy_lamp_post_01"), 4),
-               Pair.of(dwe.a("village/snowy/snowy_lamp_post_02"), 4),
-               Pair.of(dwe.a("village/snowy/snowy_lamp_post_03"), 1),
-               Pair.of(dwe.a($$2), 4),
-               Pair.of(dwe.a($$3), 4),
-               Pair.of(dwe.a($$4), 1),
-               Pair.of(dwe.g(), 9)
-            ),
-            dwg.a.b
-         )
-      );
-      nu.a(
-         $$0,
-         "village/snowy/zombie/decor",
-         new dwg(
-            $$10,
-            ImmutableList.of(
-               Pair.of(dwe.a("village/snowy/snowy_lamp_post_01", $$8), 1),
-               Pair.of(dwe.a("village/snowy/snowy_lamp_post_02", $$8), 1),
-               Pair.of(dwe.a("village/snowy/snowy_lamp_post_03", $$8), 1),
-               Pair.of(dwe.a($$2), 4),
-               Pair.of(dwe.a($$3), 4),
-               Pair.of(dwe.a($$4), 4),
-               Pair.of(dwe.g(), 7)
-            ),
-            dwg.a.b
-         )
-      );
-      nu.a(
-         $$0,
-         "village/snowy/villagers",
-         new dwg(
-            $$10,
-            ImmutableList.of(
-               Pair.of(dwe.a("village/snowy/villagers/nitwit"), 1),
-               Pair.of(dwe.a("village/snowy/villagers/baby"), 1),
-               Pair.of(dwe.a("village/snowy/villagers/unemployed"), 10)
-            ),
-            dwg.a.b
-         )
-      );
-      nu.a(
-         $$0,
-         "village/snowy/zombie/villagers",
-         new dwg(
-            $$10,
-            ImmutableList.of(Pair.of(dwe.a("village/snowy/zombie/villagers/nitwit"), 1), Pair.of(dwe.a("village/snowy/zombie/villagers/unemployed"), 10)),
-            dwg.a.b
-         )
-      );
+      $$0.a(dus.l, new dvf(List.of(dvf.a($$1.b(dut.h)), dvf.a($$1.b(dut.i))), new dvu(24, 4, dvv.a, 165745295)));
+      $$0.a(dus.m, new dvf(List.of(dvf.a($$1.b(dut.m)), dvf.a($$1.b(dut.n))), new dvu(20, 8, dvv.a, 14357621)));
+      $$0.a(dus.n, new dvf(List.of(dvf.a($$1.b(dut.o), 2), dvf.a($$1.b(dut.s), 3)), new dvu(27, 4, dvv.a, 30084232)));
+      $$0.a(dus.o, new dvf($$1.b(dut.p), new dvu(2, 1, dvv.a, 14357921)));
+      $$0.a(dus.p, new dvf($$1.b(dut.q), new dvu(20, 11, dvv.b, 10387313)));
+      $$0.a(dus.r, new dvf($$1.b(dut.k), new dvt(32, 3, 128, $$2.b(apk.o))));
+      $$0.a(dus.s, new dvf($$1.b(dut.G), new dvu(34, 8, dvv.a, 83469867)));
    }
 }
